06-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plateforme-ingress
  namespace: plateforme-electronique
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: plateforme.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
---
# ============================================================
# LoadBalancer — API Gateway sur localhost:8080
# k3s expose automatiquement les LoadBalancer sur le host
# Le frontend React appelle http://localhost:8080/api/...
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-lb
  namespace: plateforme-electronique
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: plateforme-electronique
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30180
      name: http
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-nodeport
  namespace: plateforme-electronique
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30881
      name: http
  selector:
    app: keycloak
